# waycro

./: .gitignore  flake.nix  pyproject.toml
docs/: grammar.bnf  grammar.ebnf
src/: main.py
src/lang/: error.py  lexer.py  nodes.py  parser.py  position.py  token.py
