[project]
name = "waycro"
version = "0.1.0"
description = "Macro tool and language for Wayland Compositors"
authors = [
    {name = "Filip Myslinski",email = "filipmyslinski2006@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false
